# helix-framework

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-TW.md  LICENSE  README.en.md  README.md  README.zh-TW.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+1 more)
design/: generate.mjs
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/src/: lib.rs  main.rs
docs/: CONFIG_REFERENCE.md  CONFIG_REFERENCE.zh-TW.md  FAQ.md  FAQ.zh-TW.md  core-guide.md  core-guide.zh-TW.md  distribution.md  distribution.zh-TW.md  framework-report.html  getting-started.md  getting-started.zh-TW.md  landing.html  road-to-1.0.md  road-to-1.0.zh-TW.md
examples/: README.md  README.zh-TW.md
scripts/: build-portable.sh  install-binary.sh  nightly-trace-eval-backfill.mjs  sbs-init.sh
src/: agent-autonomy.js  agent-reasoning.js  agent-runtime-loop.js  alerts.js  auth.js  command-safety.js  db.js  delegation.js  edit-tool.js  eval-lite.js  gateway-adapter.js  hooks.js  knowledge.js  llm-provider.js  mcp-client.js  memory-embedder.js  memory-manager.js  oauth.js  retry-policy.js  server-lite.js  session-store.js  skill-loader.js  skills.js  tool-registry.js  trace-lite.js  two-factor.js  workflow-checkpoint.js  workflow.js
tests/: e2e-workstation.test.mjs  integration.test.mjs  retry-policy.test.mjs  smoke.test.mjs  threads-coach.test.mjs  workflow-checkpoint.test.mjs  workstation.test.mjs  youtube-ingest.test.mjs
(+58 files in other folders)
