[package]
name = "helix-desktop-prototype"
version = "0.10.0-dev"
description = "Helix Tauri desktop MVP prototype"
authors = ["Symbiosis"]
edition = "2021"

[lib]
name = "helix_desktop_prototype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
